Fix header wave overlap

--- a/common/common.scss
+++ b/common/common.scss
@@ -282,6 +282,10 @@ html {
     width: 100vw;
     background: black;
   }
+  svg.background-wavet {
+    height: 190px;
+    min-width: 100vw;
+  }
 }
 
 .background-wave {
